<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recap_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"/>

    <!-- information recap -->
    <TextView
        android:id="@+id/recap_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/recap_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/recap_area_of_expertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/recap_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"/>

    <!-- the buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recap_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recap_back_button"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/recap_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recap_next_button"/>

    </LinearLayout>

</LinearLayout>
